vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.34.1@sha256:48267ea14d8649b2e553a5fe290c40b5dd94d54e9a24b26ae7134a75a659695f
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vaultwarden-attachments
              mountPath: /attachments
            - name: vaultwarden-icon-cache
              mountPath: /icon-cache
      volumes:
        - name: vaultwarden-attachments
          persistentVolumeClaim:
            claimName: vaultwarden-attachments
        - name: vaultwarden-icon-cache
          persistentVolumeClaim:
            claimName: vaultwarden-icon-cache
